# label-printer-scripts

./: .gitignore  CLAUDE.md  config.toml  labels.csv  labels.py  main.py  preview.py  preview_app.py  print_labels.py  print_ui.py  printer.py  pyproject.toml
.claude/: settings.local.json
data/: TEXT_default.csv  TEXT_default.toml  TEXT_default.yaml  VIAL_TOP_default.csv  VIAL_TOP_default.toml  VIAL_TOP_default.yaml  inputs.txt  simple_label_1x2.csv  simple_label_1x2.yaml  simple_label_2x2.yaml  todo.json  vial_octa.yaml  vial_octa_48x60.csv  vial_octa_48x60.yaml  vial_octa_48x60_compact.csv  vial_octa_48x60_compact.yaml  vial_octa_48x60_smd.yaml  vial_octa_80x30.csv  vial_octa_80x30.yaml  vial_top_resistor.csv  vial_top_resistor.toml  vial_top_resistor.yaml  vial_top_resistor_48x60.csv  vial_top_resistor_48x60.yaml  vial_top_resistor_compact_48x60.yaml
quick-input/: package.json  server.ts  tsconfig.json  vite.config.ts
quick-input-nest/: CLAUDE.md  README.md  inputs_transformed.txt  package.json  tsconfig.json  vite.config.ts
quick-input-nest-rxdb/: README.md  package.json  tsconfig.json  vite.config.ts
quick-input-nest-rxdb/scripts/: e2e.ts  smoke.ts
quick-input-nest-rxdb/src/: vite-plugin-pwa.d.ts
quick-input-nest-rxdb/src/client/: App.tsx  api.ts  index.html  main.tsx  router.tsx  rxdb.ts
quick-input-nest-rxdb/src/server/: app.module.ts  config.ts  main.ts
quick-input-nest-rxdb/src/shared/: contracts.ts  inputs.ts
quick-input-nest/.claude/: settings.local.json
quick-input-nest/scripts/: dev-e2e.ts  e2e.ts  generate-cert.ts  smoke.ts
quick-input-nest/scripts/adhoc/: raw-ws-probe.ts  sqlite-blob-roundtrip.ts  upgrade-echo.ts  ws-probe.ts
quick-input-nest/src/client/: App.tsx  DebugHeader.tsx  RootLayout.tsx  ThemeToggle.tsx  index.css  index.html  main.tsx  orpc.ts  router.tsx  sync.ts  theme.ts  trpc.ts
quick-input-nest/src/server/: app.module.ts  config.ts  main.ts
quick-input-nest/src/shared/: api.ts  transform.ts
quick-input/src/client/: App.tsx  index.css  index.html  main.tsx
quick-input/src/server/: index.ts  inputs.controller.ts  inputs.plugin.ts  inputs.storage.ts
quick-input/src/shared/: api.ts
sandbox/: main.py  tspl_probe.py
src/label_printer/: __init__.py  cli.py  config.py  csv_io.py  printer.py  render.py
src/label_printer/app/: __init__.py  fonts.py  main.py  sidebar.py  text_source.py
tests/: generate_golden.py  test_render_parity.py
tests/fixtures/: text_neg_gap.csv  text_neg_gap.toml  text_neg_gap.yaml  text_styled.csv  text_styled.toml  text_styled.yaml  vial_top_2x2_gap.csv  vial_top_2x2_gap.toml  vial_top_2x2_gap.yaml  vial_top_resistor.csv  vial_top_resistor.toml  vial_top_resistor.yaml
(+42 files in other folders)
