[project]
name = "label-printer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
preview = ["streamlit>=1.30"]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
