[project]
name = "label-printer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
print_ui = "print_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Flat-layout modules that ship in the wheel. preview.py / print_labels.py /
# main.py are run as scripts via `uv run python <file>`, not imported, so
# they don't need to be packaged.
include = [
    "labels.py",
    "printer.py",
    "preview_app.py",
    "print_ui.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
